# rust-food-deliverry

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs  diesel.toml  rustfmt.toml
.cargo/: config
src/: main.rs
src/common/: app_error.rs  app_response.rs  image.rs  mod.rs  paging.rs  random.rs  sql_model.rs  uid.rs
src/component/: app_context.rs  env_setting.rs  mod.rs
src/component/hash_provider/: md5.rs  mod.rs
src/component/token_provider/: mod.rs
src/component/upload_provider/: faker.rs  mod.rs
src/modules/: mod.rs
src/modules/restaurant/: mod.rs
src/modules/restaurant/business/: create_restaurant.rs  delete_restaurant.rs  get_restaurant.rs  list_restaurant.rs  mod.rs  update_restaurant.rs
src/modules/restaurant/model/: filter.rs  mod.rs  restaurant.rs  restaurant_create.rs  restaurant_update.rs  schema.rs
src/modules/restaurant/storage/: create.rs  delete.rs  get.rs  list.rs  mod.rs  update.rs
src/modules/restaurant/transport/web_actix/: create_restaurant.rs  delete_restaurant.rs  get_restaurant.rs  list_restaurant.rs  mod.rs  update_restaurant.rs
src/modules/upload/: mod.rs
src/modules/upload/business/: mod.rs  upload_image.rs
src/modules/upload/transport/: mod.rs
src/modules/upload/transport/web_actix/: mod.rs  upload_image.rs
src/modules/user/model/: mod.rs  user.rs
