[package]
name = "rust-food-delivery"
version = "0.1.0"
edition = "2018"
build = "build.rs"

[target.'cfg(windows)'.build-dependencies]
winres = "0.1.11"

[build-dependencies]
vcpkg = "0.2.15"

# https://github.com/johnthagen/min-sized-rust
[profile.release]
opt-level = "z"  # Optimize for size.
lto = true
codegen-units = 1
panic = "abort"

[dependencies]
actix-web = "3.3.2"
actix-utils = "3.0.0"
actix-multipart="0.3.0"
env_logger = "0.9.0"
diesel = { version = "1.4.7", features = ["mysql", "uuidv07", "r2d2", "chrono"] }
dotenv = "0.15.0"
md5 = "0.7.0"
chrono = { version = "0.4.19", features = ["serde"] }
serde = "1.0.129"
serde_derive = "1.0.129"
serde_json = "1.0.66"
string-error = "0.1.0"
lazy_static = "1.4.0"
rand = "0.8.4"
base58 = "0.1.0"


[package.metadata.winres]
FileVersion = "1.0.0"
FileDescription = "Food Delivery"
ProductVersion= "1.0.0"
ProductName = "Food Delivery"
OriginalFilename = "food-delivery.exe"
LegalCopyright = "Copyright (c) Tang Khai Phuong All rights reserved."
LegalTrademark = "Tang Khai Phuong"
CompanyName = "Tang Khai Phuong"
InternalName = "Tang Khai Phuong"
Comments = "This program demo food-delivery."
